--- a/src/Main.resx
+++ b/src/Main.resx
@@ -4697,6 +4697,40 @@ influencing the flow field compuations.
 
 !!Caution: May require extremely large disk space!!</value>
   </data>
+  <data name="button60.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
+        IgAALiIBquLdkgAAAAd0SU1FB+MEGA8HEGWD26IAAAaXSURBVFhH7VZ7bM1nGLbM5pyRTeyPsRlDx1ps
+        DJuNjbkTTBB3W2ZZ5rJkm40gwZoIRpHRYYpVb7R1GS1Fq0rbubbannN62p5WS1u9K7Y/xvR79rzvr7q4
+        ZWUk+2Nv8uTr7/u+fM/7Pu/ltMH/9p8yV5i9ZU64PSFvpx13It7fto5XmhNP6+XHYbmR9oqr6dOAKzFA
+        9S9A1XagYgtwyQ/lx7ojeHGjSF5rRzweJyRSXN4BVIaS+GegfANMqR9QtAg4PxM5YTacCWhUmLbV5s4I
+        tDkzthFBNqcjyO50BN+BELvTeQuhdiefb0k8o0T3M3WgbB1QugYo9iXpV0DWx0DqMJiT7wKJXVCT6IOa
+        JC/UHG+FmvjmwJFmqIltgpqDNpjDT8HEPmkhjognEhvCs8MGPj+VaK1E9zN14MJcwDMdODechD1xI7od
+        qsOfR/mOZ3EhtDGyg+xwB9oeGOcCbNdJMYBorGT3srxIOuAegxuJXVGxpzmKo33wR+FGmKoo3KyIBK4e
+        surjquAgcZiIA67FEwnEUX4f4Z0DTOVOpnKrptAUzRcHbpDiG6Ktkt3LPOF25Ic3RXniaBLuAX5Lqn1U
+        iPezMPfyYRbnZZ5V7ya46t/cU3DvcgSJg2HKfwJKVig5Cj5H6ibbn6RYQXRWsjvNFWT3dQc1xjXXApIe
+        IzkhkQl5dRQf3sWuCCdCqUgIEUyiIJjKbTAsWFO6SslM/mcwntEwWX0AVxfA4QWT/vI/OyB5ul5Er0VS
+        lVaippTV+0hOOavCrM6o2Mzu4L2ytSzUxayZmUDuGKbufRg3CzWzB4zzDcDZEch4FSajDZDesn4O4Eq0
+        Fa2Qqty7YS4z6rq23MiZsBS4+DU7ZCqLlYWaM5id0p8OvAeT+Q7RDcZFBxw+tQ68ApNWXwckf4Sp4lpl
+        zQORWIcRJcbFOTB5JM6lxJ6RMDlsz+xBxAd0oDfJ36YCb1KB1+mAN4zIn9GaDrxUTwcqAwkSVorUWxlx
+        gDWMihcC+Z+SeLwlt2eUFX32EJIzesl3rfySd+PsRPIOJG/H/LciXqynA+XrmVsLpsxfqxgXv4Qhsckd
+        W0duckZQ+qEkH0hyiV7k76nyg9EbJ+V3tK/Lv0lrXk8HSjh2S1ZSbq4sMK1oJR5dG/VIEg+nA0MZ/SAl
+        N1lSfJL7txh9VxyPnYeYrb7YsWoSVi3sB/8lg7BvwxTsWj7hJml+ILoo4Z0mDhgZv5d8YQrnwmiRkbAO
+        EjVzniOyM3LJO8nh7qW5r0ztj5gwPxyOmAFXSgiKC06gqsyNi7nHkH4yAFEhkzFhhHd2h3Y+E0lnJ55Q
+        4lumChR+S8lns9AmWgXmGWZJrXIPsaJmzo1EXtt2Qm5c3ZT82P4FKMpPRmWpCxUlDpQVp6G0MAWXLpxC
+        bmY0Ynd/gSljOyaRzocQJ/42VaBgBpA3jmQDSCRRWrC+pdhE8j4k7q1Fp7Iz78djF+BA6CcoyIlDSeFZ
+        xaULp+UHCEXnk1SFguxYZJ7bjl1bRpnh/bz8eSYjuaFwq6kDzLdxk0BIsvqSsK+uFqnIzWITYjfbzcWB
+        w8il5yXnp4/6KZmgMO+4kvJZJT7vjkGuKwo5GbuRED0PH43r5OLZEOI54VbTFGhFS0FJSzG3zK/kWFuM
+        +yCxRC3EUnDS78bREeGrJ+Nc8gbkZx/G+axDSijgs/A49ylxVlqE1savsUswe3qPazybQcj/CJapAq7u
+        fJhRST8LUR2kv3nGIaPEjNo4O5Nc2u01rfYTccvgOB2opPdDSuI6JB/yxXdzehl+LyI6EJapAi4+KmNU
+        CGSg6FARyJ70t0CGjEVsHBy1nHbSarG7ZiExZhFOJ6zSqnelhCqp80wQUpN/xMn475F0cLHeowK/82wZ
+        0VG41VQBGZ8yRHSQ8MdEflAUPrWkMl471A4ZGbNtOOVaa5/v3TZOCU7ELaUTqzVaPqurfMu+nMu9CaO8
+        C3l2twIPi71+k7BxxSC24XycTVxLBTarAi1eaKKrfKdwXwpw/fKB6NG1xQlS3l4DNC9iFrHmIbB+/HBv
+        T/imkTh1dKUWXF7mfi1KWbPSInEqfgUiAj7EyMFeRbwv/+Lf3gW0JoQ4IaPyQdGtfVvvKZPH+CQHrh1m
+        jkbNRWZqmLakKCDf3FfyZk1tEbw/jbh9DjwCk8nmI0NG+lxaTapdCk5yXiu7RC7kd0/CR2Ay2+VRiUzk
+        lRxLoUm1yyrfsi/nd/8WPEITWSW3UmBS5dJqssq37D9S2f+lNWjwFzry7wwQMZ8VAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="button13.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         Qk0OywAAAAAAADYEAAAoAAAA+gAAAMoAAAABAAgAAAAAAAAAAACxBwAAsQcAAAABAAAAAQAAUmO9/2uE
