--- a/src/GRALDomForms/Mathrasteroperation.resx
+++ b/src/GRALDomForms/Mathrasteroperation.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="label2.Text" xml:space="preserve">
+    <value>Enter a function of the form C = f(A,B). Allowed operators are: +, -, *, /, ( ), ^, sqrt(), sin(x), 
+cos(x), tan(x),  abs(x), exp(x), e^x, log(x), ln(x), pi, e;
+
+Special function 'Resample:x' resamples raster A using the new grid size x [m]</value>
+  </data>
   <metadata name="openFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
